--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,44 @@
-.App {
-  text-align: center;
+@import url("https://fonts.googleapis.com/css2?family=Spartan&display=swap");
+
+:root {
+  --page-bg-color: hsl(180, 52%, 96%);
+  --header-bg-color: #5ba4a4;
+}
+* {
+  max-width: 100%;
+  transition: all 200ms ease;
 }
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
+body {
+  padding: 0;
+  margin: 0;
+  font-family: spartan;
+  background-color: var(--bg-primary-color);
+  font-size: 15px;
 }
 
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
+ul {
+  list-style: none;
+  padding: 0;
+  margin: 0;
 }
 
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
-  display: flex;
-  flex-direction: column;
-  align-items: center;
-  justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+.header {
+  height: 155px;
+  background-color: var(--header-bg-color);
+  background-image: url("./challenge-files/images/bg-header-mobile.svg");
+  margin-bottom: 3rem;
 }
 
-.App-link {
-  color: #61dafb;
+.container {
+  width: 90%;
+  max-width: 1000px;
+  background-color: black;
+  margin: 0 auto;
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
+@media screen and (min-width: 740px) {
+  .header {
+    background-image: url("./challenge-files/images/bg-header-desktop.svg");
   }
 }
