--- a/src/App.css
+++ b/src/App.css
@@ -14,6 +14,8 @@
   max-width: 100%;
   font-weight: unset;
   transition: all 200ms ease;
+  word-wrap: break-word;
+  line-height: 1.5rem;
 }
 
 body {
@@ -39,7 +41,7 @@ ul {
 
 .container {
   width: 90%;
-  max-width: 1100px;
+  max-width: 1110px;
   margin: 0 auto;
 }
 
@@ -55,23 +57,47 @@ ul {
 }
 .job-list-item:hover,
 .job-list-item:focus {
-  padding: 2rem;
+  padding-left: 2rem;
+  padding-right: 2rem;
   box-shadow: 0 30px 30px -10px rgba(56, 42, 42, 0.2);
+}
+.job-header {
+  margin-bottom: 0.7rem;
+  display: flex;
+  align-items: center;
+  gap: 1rem;
 }
 .job-company {
   color: var(--dark-grayish-cyan);
   font-size: 0.8rem;
-  margin-bottom: 1rem;
   font-weight: 700;
 }
 .job-position {
   font-weight: 700;
   font-size: 1.15rem;
 }
+.new-tablet {
+  font-weight: 700;
+  background-color: var(--header-bg-color);
+  padding: 1px 0.5rem;
+
+  color: var(--light-grayish-cyan);
+  border-radius: 20px;
+  font-size: 0.7rem;
+}
+.featured-tablet {
+  font-weight: 700;
+  padding: 1px 0.5em;
+  border-radius: 20px;
+  font-size: 0.7rem;
+
+  background-color: #2c3a3a;
+  color: white;
+}
 
 .job-info {
   color: var(--dark-grayish-cyan);
-  padding: 1rem 0;
+  padding: 0.8rem 0;
   border-bottom: 1px solid var(--very-dark-grayish-cyan);
   font-weight: 700;
 }
@@ -88,7 +114,7 @@ ul {
 .filter-tablet {
   font-weight: 700;
   background-color: var(--filter-tablet-bg-color);
-  padding: 0.5rem;
+  padding: 0.2rem 0.5rem;
   margin: 0.5rem;
   color: var(--dark-grayish-cyan);
   border-radius: 5px;
@@ -119,6 +145,7 @@ ul {
     justify-content: space-between;
     padding: 1.5rem;
     margin-bottom: 2.5rem;
+    gap: 8rem;
   }
   .job-list-item main {
     display: flex;
@@ -138,5 +165,11 @@ ul {
     position: relative;
     top: unset;
     margin-right: 1.5rem;
+  }
+  .job-company {
+    font-size: 0.8rem;
+  }
+  .filter-tablet {
+    font-size: 0.8rem;
   }
 }
