--- a/src/App.css
+++ b/src/App.css
@@ -56,7 +56,7 @@ ul {
   border-radius: 8px;
 }
 .job-list-item:hover,
-.job-list-item:focus {
+.job-list-item:active {
   padding-left: 2rem;
   padding-right: 2rem;
   box-shadow: 0 30px 30px -10px rgba(56, 42, 42, 0.2);
@@ -66,6 +66,7 @@ ul {
   display: flex;
   align-items: center;
   gap: 1rem;
+  flex-wrap: wrap;
 }
 .job-company {
   color: var(--dark-grayish-cyan);
@@ -80,7 +81,7 @@ ul {
   font-weight: 700;
   background-color: var(--header-bg-color);
   padding: 1px 0.5rem;
-
+  
   color: var(--light-grayish-cyan);
   border-radius: 20px;
   font-size: 0.7rem;
@@ -90,7 +91,7 @@ ul {
   padding: 1px 0.5em;
   border-radius: 20px;
   font-size: 0.7rem;
-
+  
   background-color: #2c3a3a;
   color: white;
 }
@@ -120,9 +121,12 @@ ul {
   border-radius: 5px;
   font-size: 0.8rem;
 }
-.filter-tablet:hover {
+.filter-tablet:hover,
+.filter-tablet:active {
+  cursor: pointer;
   background-color: var(--header-bg-color);
   color: var(--light-grayish-cyan);
+  cursor: pointer;
 }
 
 .job-logo {
@@ -133,6 +137,92 @@ ul {
 }
 .featured {
   border-left: 5px solid var(--very-dark-grayish-cyan);
+}
+
+.filters-bar {
+  box-shadow: 0 15px 15px -4px hsla(180, 29%, 50%, 20%);
+  border-radius: 10px;
+  margin: 0 auto;
+  background-color: rgb(255, 255, 255);
+  margin-top: -6rem;
+  margin-bottom: 4rem;
+  display: flex;
+  justify-content: space-between;
+  align-items: center;
+  gap: 10px;
+  flex-wrap: wrap;
+  
+}
+
+.filters-bar-list {
+  margin : 1.5rem;
+  display: flex;
+  flex-wrap: wrap;
+  align-items: center;
+}
+.filters-bar-item {
+  font-weight: 700;
+  display: flex;
+  margin: 0.5rem;
+  border-radius: 5px;
+  font-size: 0.9rem;
+  align-items: center;
+  border-radius: 5px;
+  gap: 5px;
+  background-color: var(--filter-tablet-bg-color);
+  color: var(--dark-grayish-cyan);
+}
+
+.filters-bar-tablet {
+  padding-left: 10px;
+}
+.filters-bar-close {
+  cursor: pointer;
+  width: 2rem;
+  height: 2rem;
+  border-radius: 0 5px 5px 0;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  
+  color: var(--filter-tablet-bg-color);
+  background-color: var(--dark-grayish-cyan);
+}
+.clear-btn {
+  margin : 1.5rem;
+  color: var(--very-dark-grayish-cyan);
+  font-weight: 700;
+  cursor: pointer;
+}
+.inAnimation {
+  animation: grow 200ms ease;
+  animation-delay: 20ms;
+  animation-fill-mode: forwards;
+}
+.outAnimation {
+  animation: shrink 200ms ease;
+  animation-fill-mode: forwards;
+}
+
+@keyframes grow {
+  0% {
+    display: none;
+    width: 0%;
+    height: 0%;
+  }
+  100% {
+    width: unset;
+    height: unset;
+  }
+}
+@keyframes shrink {
+  0% {
+    width: inherit;
+  }
+  100% {
+    width: 0%;
+    visibility: hidden;
+  }
 }
 
 @media screen and (min-width: 740px) {
